# CodeCraft-Journey

./: .cz.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
AcWing/Easy/0785/: solution.cpp
AcWing/Easy/0786/: solution.cpp
AcWing/Easy/0787/: solution.cpp
AcWing/Easy/0788/: solution.cpp
AcWing/Easy/5439/: solution.py
AcWing/Easy/6038/: solution.py
AcWing/Easy/6095/: solution.cpp
AcWing/Easy/6098/: solution.py
AcWing/Easy/6122/: solution.cpp
AcWing/Easy/6123/: solution.cpp
AcWing/Easy/6134/: solution.cpp
AcWing/Easy/6135/: solution.cpp
AcWing/Hard/6100/: solution.cpp
AcWing/Medium/3681/: solution.cpp
AcWing/Medium/6069/: solution.cpp
AcWing/Medium/6099/: solution.cpp
AcWing/Medium/6118/: solution.cpp
AcWing/Medium/6131/: solution.py
Codeforces/1352C/: solution.py
Codeforces/1A/: solution.cpp
Codeforces/466A/: solution.cpp
Codeforces/4A/: solution.cpp
DeepML/Easy/0001/: solution.py
DeepML/Easy/0002/: solution.py
DeepML/Easy/0003/: solution.py
DeepML/Easy/0004/: solution.py
DeepML/Easy/0005/: solution.py
DeepML/Easy/0044/: solution.py
DeepML/Medium/0006/: solution.py
DeepML/Medium/0007/: solution.py
DeepML/Medium/0008/: solution.py
DeepML/Medium/0009/: solution.py
DeepML/Medium/0053/: solution.py
LeetCode/Easy/0908/: solution.py
LeetCode/Easy/0922/: solution.py
LeetCode/Easy/1323/: solution.py
LeetCode/Easy/2099/: solution.py
Luogu/P1177/: solution.cpp
Luogu/P1923/: solution.cpp
script/: update_stats.py
template/: note.md  solution.py
(+38 files in other folders)
